--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,45 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@custom-variant dark (&:where(.dark, .dark *));
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer utilities {
+  .light\:bg-light-hover {
+    background-color: #fcf4ff;
   }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  .light\:bg-light-theme {
+    background-color: #fff;
+  }
+
+  .light\:text-light-theme {
+    color: #11001f;
+  }
+
+  .dark\:bg-dark-hover {
+    background-color: #2a004a;
+  }
+
+  .dark\:bg-dark-theme {
+    background-color: #11001f;
+  }
+
+  .dark\:text-dark-theme {
+    color: #fff;
+  }
+
+  .font-outfit {
+    font-family: "Outfit", sans-serif;
+  }
+
+  .font-ovo {
+    font-family: "Ovo", serif;
+  }
+
+  .hover\:shadow-black:hover {
+    box-shadow: 4px 4px 0 #000;
+  }
+
+  .hover\:shadow-white:hover {
+    box-shadow: 4px 4px 0 #fff;
+  }
 }
